# variable-watcher-gui

./: .gitignore  README.md  neutralino.config.json  vars.json
extensions/serial-input-python/: main.py  mock_serial_generator.py  pyproject.toml  vars.json
vite-src/: package.json
vite-src/src/: App.tsx  constants.ts  serialBridge.ts  system.ts  variableStore.ts
vite-src/src/components/: AccelerometerWidget.tsx  NumericWidget.tsx  WidgetBoard.tsx  WidgetCard.tsx  widget-common.ts  widget-operations.ts
